--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS GRID Props</title>
-    <link rel="stylesheet" href="CSSGRID-Props.css">
+    <link rel="stylesheet" href="CSS-GRID-v2.0.css">
 </head>
 <body>
     <section class="grid__section" style="--background: white; --padding: 4rem 0;">
